@@ -29,6 +29,20 @@ support it, currently:
 ________________________________________________________________________________
 
 
+// TODO: move this somewhere more appropriate
+|:window| |:wind | +
+||:wind[ow] {cmd}||
+________________________________________________________________________________
+Execute {cmd} and tell it to output in a new window. Works only for commands
+that support it, currently:
+
+* [c]:tab help[c]
+* [c]:tab prefs[!][c]
+* [c]:tab addons[c]
+* [c]:tab downloads[c]
+________________________________________________________________________________
+
+
 |:tabdu| |:tabduplicate|
 ||:[count]tabdu[plicate]|| +
 ________________________________________________________________________________
